--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "API layer for inputting high scores, man",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "testWatch": "jest --watch"
   },
   "author": "Jaime Farnan",
   "license": "ISC",
@@ -12,6 +13,9 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7"
   }
