--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "testWatch": "jest --watch"
+    "testWatch": "jest --watch",
+    "start": "nodemon src/server.js"
   },
   "author": "Jaime Farnan",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "@babel/preset-env": "^7.13.15",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   }
 }
