--- a/api/package.json
+++ b/api/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "test": "jest",
     "testWatch": "jest --watch",
-    "start": "nodemon src/server.js"
+    "start": "nodemon -r esm src/server.js"
   },
   "author": "Jaime Farnan",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "esm": "^3.2.25",
+    "express": "^4.17.1",
+    "knex": "^0.95.4",
+    "mysql": "^2.18.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
