--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "author": "Jaime Farnan",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "knex": "^0.95.4",
