(api) remove dotenv file, update package and test setup to use dotenv, update README

--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
     "migrate-down": "knex migrate:down",
     "migrate-latest": "knex migrate:latest",
     "seed": "knex seed:run",
-    "start": "nodemon -r esm src/server.js",
+    "start": "nodemon -r esm -r dotenv/config src/server.js",
     "test": "jest",
     "testWatch": "jest --watch"
   },
